<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        style="@style/register_bg"
        android:layout_marginTop="@dimen/y40"
        android:orientation="horizontal" >

        <ImageView
            style="@style/registerimage"
            android:padding="@dimen/x8"
            android:src="@drawable/shou" />

        <TextView style="@style/txvertical_line" />

        <EditText
            android:id="@+id/tel_phone"
            style="@style/login_edit"
            android:hint="@string/yephone_hint"
            android:inputType="phone" />
    </LinearLayout>

    <View style="@style/me_line" />

    <LinearLayout style="@style/register_bg" >

        <ImageView
            style="@style/registerimage"
            android:padding="@dimen/x10"
            android:src="@drawable/weixin_login_hetong" />

        <TextView style="@style/txvertical_line" />

        <EditText
            android:id="@+id/tv_htnum"
            style="@style/login_edit"
            android:hint="@string/hetong_no" >
        </EditText>
    </LinearLayout>

    <View style="@style/me_line" />

    <LinearLayout style="@style/register_bg" >

        <ImageView
            style="@style/registerimage"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/weixin_login_carid" />

        <TextView style="@style/txvertical_line" />

        <EditText
            android:id="@+id/carnum"
            style="@style/login_edit"
            android:digits="@string/inputtype3"
            android:hint="@string/edit_carno" />
    </LinearLayout>

    <View style="@style/me_line" />

    <LinearLayout style="@style/verification_style" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:padding="@dimen/x20" >

            <ImageView
                style="@style/registerimage"
                android:padding="@dimen/x8"
                android:paddingRight="@dimen/x5"
                android:src="@drawable/weixin_login_icon_card" />

            <TextView style="@style/vertical_line" />

            <EditText
                android:id="@+id/code"
                style="@style/login_edit"
                android:hint="@string/identifying_code_hint"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_getcode"
            style="@style/gettextCode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x20"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="@dimen/x34"
            android:layout_height="@dimen/y36"
            android:layout_margin="@dimen/x10"
            android:button="@drawable/checkbox_service_agreement_selector"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/read_agree"
            android:textColor="#333333"
            android:textSize="@dimen/x26" />

        <TextView
            android:id="@+id/xieyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/read_agree_name"
            android:textColor="#1F1FFB"
            android:textSize="@dimen/x26" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/y40"
        android:background="@drawable/btn_login_selecter"
        android:gravity="center"
        android:padding="@dimen/x20"
        android:text="提  交"
        android:textColor="@color/white"
        android:textSize="@dimen/x24" />

</LinearLayout>