<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        style="@style/register_bg"
        android:layout_marginTop="@dimen/y40"
        android:orientation="horizontal" >

        <ImageView
            style="@style/registerimage"
            android:src="@drawable/shou" />

        <TextView
            style="@style/textregister"
            android:text="手机号" />

        <TextView style="@style/txvertical_line" />

        <EditText
            android:id="@+id/tel_phone"
            style="@style/login_edit"
            android:hint="@string/accounts_hint"
            android:inputType="phone" />
    </LinearLayout>

    <View style="@style/me_line" />

    <LinearLayout style="@style/verification_style" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:padding="@dimen/x20" >

            <ImageView
                style="@style/registerimage"
                android:src="@drawable/yan" />

            <TextView
                style="@style/textregister"
                android:text="验证码" />

            <TextView style="@style/vertical_line" />

            <EditText
                android:id="@+id/code"
                style="@style/login_edit"
                android:hint="@string/identifying_code_hint"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_code"
            style="@style/gettextCode" />
    </LinearLayout>

    <View style="@style/me_line" />

    <LinearLayout style="@style/register_bg" >

        <ImageView
            style="@style/registerimage"
            android:src="@drawable/mi" />

        <TextView
            style="@style/textregister"
            android:text="密    码" />

        <TextView style="@style/txvertical_line" />

        <EditText
            android:id="@+id/pass"
            style="@style/login_edit"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

    <View style="@style/me_line" />

    <LinearLayout style="@style/register_bg" >

        <ImageView
            style="@style/registerimage"
            android:src="@drawable/mi" />

        <TextView
            style="@style/textregister"
            android:text="确    认" />

        <TextView style="@style/txvertical_line" />

        <EditText
            android:id="@+id/sure_pass"
            style="@style/login_edit"
            android:hint="@string/sure_hint"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

    <View style="@style/me_line" />

    <LinearLayout style="@style/register_bg" >

        <ImageView
            style="@style/registerimage"
            android:layout_marginLeft="@dimen/x10"
            android:src="@drawable/daili"
            android:layout_marginRight="@dimen/x10" />

        <TextView
            style="@style/textregister"
            android:text="我是代理商" />

        <TextView style="@style/txvertical_line" />

        <CheckBox
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x30"
            android:button="@drawable/checkbox_payt_selector"
            android:checked="true" />

        <TextView
            style="@style/textregister"
            android:text="否" />

        <CheckBox
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x30"
            android:button="@drawable/checkbox_payt_selector"
            android:checked="false" />

        <TextView
            style="@style/textregister"
            android:text="是" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x20"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x15"
            android:button="@drawable/checkbox_service_agreement_selector"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/read_agree"
            android:textColor="#333333"
            android:textSize="@dimen/x26" />

        <TextView
            android:id="@+id/xieyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/read_agree_name"
            android:textColor="#1F1FFB"
            android:textSize="@dimen/x26" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/btn_register"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_weight="1"
            android:background="@drawable/btn_login_selecter"
            android:gravity="center"
            android:padding="@dimen/x20"
            android:text="提  交"
            android:textColor="@color/white"
            android:textSize="@dimen/x24" />

        <TextView
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:id="@+id/old_userbind"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_weight="1"
            android:textColor="#2A8AE0"
            android:gravity="center"
            android:padding="@dimen/x20"
            android:text="@string/old_userbind"
            android:textSize="@dimen/x24" />
    </LinearLayout>

</LinearLayout>